<resources>
    <string name="app_name">ChatDemo</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="str_email">User Name</string>
    <string name="str_password">Password</string>
    <string name="str_login">Login</string>

    <string name="str_name">Name</string>
    <string name="str_type">Chatroom Type</string>
    <string name="str_create_chatroom">Create Chatroom</string>
</resources>
